--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,18 @@ section {
 
 nav.navbar {
 	background-color: rgba(0, 0, 0, 0.6);
+	-webkit-transition: all 1s cubic-bezier(0.22, 0.61, 0.36, 1);
+	-moz-transition: all 1s cubic-bezier(0.22, 0.61, 0.36, 1);
+	-o-transition: all 1s cubic-bezier(0.22, 0.61, 0.36, 1);
+	transition: all 1s cubic-bezier(0.22, 0.61, 0.36, 1);
 	z-index: 10;
+}
+
+body.scrolled nav.navbar {
+	background-color: rgba(0, 0, 0, 1.0);
+	-webkit-box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.28);
+	-moz-box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.28);
+	box-shadow: 0px 1px 6px 0px rgba(0,0,0,0.28);
 }
 
 .navbar-default .navbar-nav > li > a {
@@ -151,7 +162,7 @@ nav.navbar {
     left: 50%;
     margin-left: -25px;
     background-color: #999999;
-    z-index: 100;
+    z-index: 9;
     border-top-right-radius: 50%;
     border-top-left-radius: 50%;
     border-bottom-right-radius: 50%;
