--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,10 @@ nav.navbar {
 	z-index: 10;
 }
 
-nav.collapsed {
-	background-color: rgba(0, 0, 0, 1.0);
+@media (max-width: 768px) {
+	nav.navbar {
+		background-color: rgba(0, 0, 0, 1.0);
+	}
 }
 
 body.scrolled nav.navbar {
